samples/_failures_safe/1761075184_7ab05d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_517675b8.c: In function ‘main’:
./samples/SAFE/__tmp_517675b8.c:141:5: error: ‘add’ undeclared (first use in this function)
  141 |     add
      |     ^~~
./samples/SAFE/__tmp_517675b8.c:141:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_517675b8.c:141:8: error: expected ‘;’ at end of input
  141 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_517675b8.c:141:5: error: expected declaration or statement at end of input
  141 |     add
      |     ^~~
